--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,10 +13,10 @@ layout: default
   </div>
 	<div class="pagination">  
 	  {% if page.previous.url %}  
-		<a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>  
+		<a class="prev" href="{{page.previous.url | relative_url }}">&laquo; {{page.previous.title}}</a>  
 	  {% endif %}  
 	  {% if page.next.url %}  
-		<a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>  
+		<a class="next" href="{{page.next.url | relative_url }}">{{page.next.title}} &raquo;</a>  
 	  {% endif %}  
 	</div>
 
