--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,16 +4,10 @@ layout: default
 
 <div class="home">
   {{ content }}
-
   <ul class="post-list">
     {% for post in site.posts %}
       <li>
-        <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
-
-        <h2>
-          <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-        </h2>
-	<p class="post-excerpt">{{ post.excerpt | strip_html | truncatewords: 100}} [<a href="{{ post.url | relative_url }}">read more</a>]</p>
+		{% include post-sample.html %}
       </li>
     {% endfor %}
   </ul>
