--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,15 @@
 <head>
+	{% if site.google_adsense %}
+		<!-- Google AdSense -->
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script>
+		  (adsbygoogle = window.adsbygoogle || []).push({
+			google_ad_client: "{{ site.google_adsense }}",
+			enable_page_level_ads: true
+		  });
+		</script>
+		<!-- Google AdSense -->
+	{% endif %}
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   {% include meta.html %}
 
