--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,13 +8,15 @@
 		</div>
 	</div>
 </footer>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- ad1-blog -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-0343541018267440"
-     data-ad-slot="8291719890"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<div class="wrapper">
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- ad1-blog -->
+	<ins class="adsbygoogle"
+		 style="display:block"
+		 data-ad-client="ca-pub-0343541018267440"
+		 data-ad-slot="8291719890"
+		 data-ad-format="auto"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+</div>
