--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,11 @@
       </span>
 
       <div class="trigger">
+        {% for collection in site.collections %}
+          {% if collection.title %}
+			<a class="page-link" href="{{ collection.url | relative_url }}">{{ collection.title | camelized }}</a>
+          {% endif %}
+        {% endfor %}
         {% for my_page in site.pages %}
           {% if my_page.title %}
           <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
