--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Blog
 ---
 
 <div class="home">
@@ -12,3 +13,28 @@ layout: default
     {% endfor %}
   </ul>
 </div>
+{% comment %}
+	{% for category in site.category_names %}
+	  <div class='pages-header'>
+		<h2 id='{{ category | downcase | replace: " ", "-" }}'>{{ category }}</h2>
+	  </div>
+	  <div class='pages-list'>
+		{% for page in site.pages %}
+		  {% if page.category == category %}
+			<a href="{{base}}{{ page.url }}">
+			  <span class='title'>{{ page.title }}</span>
+			  <span class='date'>{{ page.url | remove: '.html' | remove: '/' }}</span>
+			</a>
+		  {% endif %}
+		{% endfor %}
+	  </div>
+	{% endfor %}
+
+	{% for post in site.posts %}
+		<a class='post-index-item' href='{{ base }}{{ post.url | replace: ".html", "" }}'>
+			<span class='date'>{{ post.date | date_to_string }}</span>
+			<span class='article'>{{ post.title }}</span>
+			<strong class='tag'>{{ post.tags | first }}</strong>
+		</a>
+	{% endfor %}
+{% endcomment %}
