--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,11 +19,13 @@
 			<a class="page-link" href="{{ collection.url | relative_url }}">{{ collection.title | camelized }}</a>
           {% endif %}
         {% endfor %}
+		{% comment %}
         {% for my_page in site.pages %}
           {% if my_page.title %}
           <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
           {% endif %}
         {% endfor %}
+		{% end comment %}
       </div>
     </nav>
 
