--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -7,6 +7,12 @@
   gtag('js', new Date());
 
   gtag('config', '{{ site.google_analytics }}');
+  gtag('consent', 'default', {
+    'ad_storage': 'denied',
+    'ad_user_data': 'denied',
+    'ad_personalization': 'denied',
+    'analytics_storage': 'denied'
+  });
 </script>
 <!-- Google tag (gtag.js) END -->
 {% endif %}
