--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
       </span>
 
       <div class="trigger">
-        <a class="page-link" href="resume">resume</a>
+        <a class="page-link" href="/resume">Resume</a>
         {% for collection in site.collections %}
         {% if collection.title %}
         <a class="page-link" href="{{ collection.url | relative_url }}">{{ collection.title | camelized }}</a>
